[package]
name = "tds-meter"
description = "An embedded-hal driver for TDS Meter (total disolved solids sensor)"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Charles Johnson <charles@charlesjohnson.name>",
]
keywords = [
    "embedded-hal-driver",
    "tds",
]
repository = "https://github.com/c-h-johnson/tds-meter-rs"
edition = "2021"

[dependencies]
embedded-hal = {version = "0.2.7", features=["unproven"]}
nb="1.0.*"
num-traits = {version = "0.2.15", default_features = false}
